[gd_scene load_steps=75 format=3 uid="uid://ejyhsof48xyh"]

[ext_resource type="Script" uid="uid://gg27c6sxp2uj" path="res://scripts/argis.gd" id="1_eqhmj"]
[ext_resource type="Texture2D" uid="uid://c148ap4syhcx0" path="res://assets/Argisspritesheet.png" id="1_n5l56"]
[ext_resource type="Texture2D" uid="uid://xnupvra0xwj6" path="res://assets/2ndphase.png" id="2_mwiy4"]
[ext_resource type="PackedScene" uid="uid://c3esguxjka6nk" path="res://scenes/argisbar.tscn" id="3_8apko"]
[ext_resource type="AudioStream" uid="uid://cl5n4531f2uh1" path="res://assets/laser-beam-76426.mp3" id="6_701lf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_n881m"]
atlas = ExtResource("2_mwiy4")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lt3fc"]
atlas = ExtResource("2_mwiy4")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jf8gc"]
atlas = ExtResource("2_mwiy4")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bpmyq"]
atlas = ExtResource("2_mwiy4")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u3u1b"]
atlas = ExtResource("2_mwiy4")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lkhjy"]
atlas = ExtResource("2_mwiy4")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tlro0"]
atlas = ExtResource("2_mwiy4")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_81rdu"]
atlas = ExtResource("2_mwiy4")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eoja8"]
atlas = ExtResource("2_mwiy4")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lkq0g"]
atlas = ExtResource("2_mwiy4")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t713y"]
atlas = ExtResource("2_mwiy4")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_arxvi"]
atlas = ExtResource("2_mwiy4")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s67wa"]
atlas = ExtResource("2_mwiy4")
region = Rect2(768, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_025o8"]
atlas = ExtResource("2_mwiy4")
region = Rect2(832, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_usylf"]
atlas = ExtResource("2_mwiy4")
region = Rect2(896, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yuypa"]
atlas = ExtResource("2_mwiy4")
region = Rect2(960, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8apko"]
atlas = ExtResource("1_n5l56")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mwiy4"]
atlas = ExtResource("1_n5l56")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_agjqy"]
atlas = ExtResource("1_n5l56")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_701lf"]
atlas = ExtResource("1_n5l56")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cw1cw"]
atlas = ExtResource("1_n5l56")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u700h"]
atlas = ExtResource("1_n5l56")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uurop"]
atlas = ExtResource("1_n5l56")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1q2gj"]
atlas = ExtResource("1_n5l56")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5qkd6"]
atlas = ExtResource("1_n5l56")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jvjfs"]
atlas = ExtResource("1_n5l56")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_we8hk"]
atlas = ExtResource("1_n5l56")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8gwy7"]
atlas = ExtResource("1_n5l56")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_07opi"]
atlas = ExtResource("1_n5l56")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_08o64"]
atlas = ExtResource("1_n5l56")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6101p"]
atlas = ExtResource("1_n5l56")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jtmr"]
atlas = ExtResource("1_n5l56")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yr136"]
atlas = ExtResource("1_n5l56")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kipua"]
atlas = ExtResource("1_n5l56")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b7irt"]
atlas = ExtResource("1_n5l56")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_crqbg"]
atlas = ExtResource("1_n5l56")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mm2oh"]
atlas = ExtResource("1_n5l56")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0d14l"]
atlas = ExtResource("1_n5l56")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cywco"]
atlas = ExtResource("1_n5l56")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_igneo"]
atlas = ExtResource("1_n5l56")
region = Rect2(256, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lsxog"]
atlas = ExtResource("1_n5l56")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dso47"]
atlas = ExtResource("1_n5l56")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r3amm"]
atlas = ExtResource("1_n5l56")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r37r5"]
atlas = ExtResource("1_n5l56")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wq4jg"]
atlas = ExtResource("1_n5l56")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ng3o"]
atlas = ExtResource("1_n5l56")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0y6m1"]
atlas = ExtResource("1_n5l56")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n8780"]
atlas = ExtResource("1_n5l56")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_it8pm"]
atlas = ExtResource("1_n5l56")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vloww"]
atlas = ExtResource("1_n5l56")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1dc0"]
atlas = ExtResource("1_n5l56")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jkipc"]
atlas = ExtResource("1_n5l56")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wiuko"]
atlas = ExtResource("1_n5l56")
region = Rect2(768, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yeftp"]
atlas = ExtResource("1_n5l56")
region = Rect2(0, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ls3x"]
atlas = ExtResource("1_n5l56")
region = Rect2(64, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qyq8"]
atlas = ExtResource("1_n5l56")
region = Rect2(128, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2drmj"]
atlas = ExtResource("1_n5l56")
region = Rect2(192, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tavdm"]
atlas = ExtResource("1_n5l56")
region = Rect2(256, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iot1x"]
atlas = ExtResource("1_n5l56")
region = Rect2(320, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jbolt"]
atlas = ExtResource("1_n5l56")
region = Rect2(384, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_brkad"]
atlas = ExtResource("1_n5l56")
region = Rect2(448, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ft6n1"]
atlas = ExtResource("1_n5l56")
region = Rect2(512, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7swq2"]
atlas = ExtResource("1_n5l56")
region = Rect2(576, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_60d8o"]
atlas = ExtResource("1_n5l56")
region = Rect2(640, 256, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_n881m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n881m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lt3fc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jf8gc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bpmyq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u3u1b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lkhjy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tlro0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_81rdu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eoja8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lkq0g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t713y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_arxvi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s67wa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_025o8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_usylf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yuypa")
}],
"loop": false,
"name": &"2ndphase",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8apko")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mwiy4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_agjqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_701lf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cw1cw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u700h")
}],
"loop": false,
"name": &"Signal",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uurop")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1q2gj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5qkd6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jvjfs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_we8hk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8gwy7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_07opi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_08o64")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6101p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jtmr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yr136")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kipua")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b7irt")
}],
"loop": false,
"name": &"glow",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_crqbg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mm2oh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0d14l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cywco")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_igneo")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lsxog")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dso47")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r3amm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r37r5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wq4jg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ng3o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0y6m1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n8780")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_it8pm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vloww")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1dc0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jkipc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wiuko")
}],
"loop": false,
"name": &"lightning",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yeftp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ls3x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qyq8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2drmj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tavdm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iot1x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jbolt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_brkad")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ft6n1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7swq2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60d8o")
}],
"loop": false,
"name": &"retract",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eqhmj"]
size = Vector2(80, 84)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n5l56"]
size = Vector2(8, 130)

[sub_resource type="CircleShape2D" id="CircleShape2D_mwiy4"]
radius = 321.0

[sub_resource type="CircleShape2D" id="CircleShape2D_8apko"]
radius = 789.124

[node name="ARGIS" type="CharacterBody2D"]
z_index = -1
collision_layer = 2
collision_mask = 2
script = ExtResource("1_eqhmj")

[node name="retracttimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_n881m")
animation = &"lightning"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 86)
shape = SubResource("RectangleShape2D_eqhmj")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(0, -21)
shape = SubResource("RectangleShape2D_n5l56")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(100, 128)

[node name="Marker2D2" type="Marker2D" parent="."]
position = Vector2(-100, 128)

[node name="RetractArea" type="Area2D" parent="."]
position = Vector2(0, -54)

[node name="CollisionShape2D" type="CollisionShape2D" parent="RetractArea"]
position = Vector2(0, 68)
shape = SubResource("CircleShape2D_mwiy4")

[node name="lightningcooldown" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="LaserTimer" type="Timer" parent="."]
wait_time = 15.0
autostart = true

[node name="TextureProgressBar" parent="." instance=ExtResource("3_8apko")]
offset_left = -372.0
offset_top = 149.0
offset_right = -180.0
offset_bottom = 161.0
scale = Vector2(4, 4)

[node name="Follow Area" type="Area2D" parent="."]
position = Vector2(0, -20)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Follow Area"]
position = Vector2(0, -24)
shape = SubResource("CircleShape2D_8apko")

[node name="Lasermarker" type="Marker2D" parent="."]
position = Vector2(0, -75)

[node name="LaserSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_701lf")

[connection signal="timeout" from="retracttimer" to="." method="_on_retracttimer_timeout"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="RetractArea" to="." method="_on_retract_area_body_entered"]
[connection signal="body_exited" from="RetractArea" to="." method="_on_retract_area_body_exited"]
[connection signal="timeout" from="lightningcooldown" to="." method="_on_lightningcooldown_timeout"]
[connection signal="timeout" from="LaserTimer" to="." method="_on_laser_timer_timeout"]
